syntax = "proto3";

package markov;

import "google/protobuf/any.proto";

message Markov {
  google.protobuf.Any graph = 1;
}

message NGramMarkov {
  uint32 context_size = 1;
  google.protobuf.Any graph = 2;
}

message NGramNodeMetadata {
  repeated uint64 context = 1;
}

message BackoffMarkov {
  uint32 max_context_size = 1;
  google.protobuf.Any graph = 2;
}
